--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
+    <header></header>
+    <h1></h1>
+    <main></main>
+    <footer></footer>
     <script src="./JS/index.js"></script>
 </body>
 </html>
