--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header></header>
+    <header><img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo">
+    </header>
     <h1></h1>
     <main></main>
     <footer></footer>
