--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header><img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo">
+    <header>
+        
+        <img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo">
+
+        <nav>
+            <a href="./index.html"><li>|Home|</li></a>
+            <a href="./categorias.html"><li>|Categorias|</li></a>
+            <a href="./login.html"><li></li>|Login|</a>
+            <a href="./registro.html"><li>|Registro|</li></a>
+        </nav>
+        
     </header>
     <h1></h1>
     <main></main>
