--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
             <a href="./login.html"><li></li>|Login|</a>
             <a href="./registro.html"><li>|Registro|</li></a>
         </nav>
-        
+
     </header>
     <h1></h1>
     <main></main>
-    <footer></footer>
+    <footer> 
+        <p>Lorenzo Fernandez Arancibia</p>
+        <p>Felipe Repetto Echave</p>
+        <p>Bautista Saenz Valiente</p>
+    </footer>
     <script src="./JS/index.js"></script>
 </body>
 </html>
