--- a/detalles.html
+++ b/detalles.html
@@ -9,13 +9,15 @@
 <body>
     <header>
         
-        <img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo">
+        <section class="seccion_logo">
+            <img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo" class="logo">
+        </section>
 
-        <nav>
-            <a href="./index.html"><li>|Home|</li></a>
-            <a href="./categorias.html"><li>|Categorias|</li></a>
-            <a href="./login.html"><li></li>|Login|</a>
-            <a href="./registro.html"><li>|Registro|</li></a>
+        <nav class="nav_index">
+                <a href="./index.html"><p>|Home|</p></a>
+                <a href="./categorias.html"><p>|Categorias|</p></a>
+                <a href="./login.html"><p>|Login|</p></a>
+                <a href="./registro.html"><p>|Registro|</p></a>
         </nav>
 
     </header>
