Lo que hicimos recien en Java

--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
         </section>
 
         <nav class="nav_index">
-                <a href="./index.html"><p>|Home|</p></a>
-                <a href="./categorias.html"><p>|Categorias|</p></a>
-                <a href="./login.html"><p>|Login|</p></a>
-                <a href="./registro.html"><p>|Registro|</p></a>
+                <a href="./index.html" class="a_index"><p class="p_nav_index">|Home|</p></a>
+                <a href="./categorias.html" class="a_index"><p class="p_nav_index">|Categorias|</p></a>
+                <a href="./login.html" class="a_index"><p class="p_nav_index">|Login|</p></a>
+                <a href="./registro.html" class="a_index"><p class="p_nav_index"> |Registro|</p></a>
         </nav>
 
         <form action="./resultados.html" method="GET">
             <label>Buscar</label>
             <input type="text" name="buscador" placeholder="Buscar" required>
-            <button type="submit"></button>
+            <button type="submit" class="boton_index_forms">enviar</button>
         </form>
 
     </header>
-    <h1></h1>
-    <main></main>
+    
+    <main>
+        <section class="menu">   </section>
+    </main>
     <footer> 
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
