--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         </section>
 
         <nav class="nav_index">
-                <a href="./index.html" class="a_index"><p class="p_nav_index">|Home|</p></a>
-                <a href="./categorias.html" class="a_index"><p class="p_nav_index">|Categorias|</p></a>
-                <a href="./login.html" class="a_index"><p class="p_nav_index">|Login|</p></a>
-                <a href="./registro.html" class="a_index"><p class="p_nav_index"> |Registro|</p></a>
+                <a href="./index.html" class="a_index"><p class="p_nav_index">Home</p></a>
+                <a href="./categorias.html" class="a_index"><p class="p_nav_index">Categorias</p></a>
+                <a href="./login.html" class="a_index"><p class="p_nav_index">Login</p></a>
+                <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
 
         <form action="./resultados.html" method="GET">
-            <label>Buscar</label>
+            <label>Recetas: </label>
             <input type="text" name="buscador" placeholder="Buscar" required>
             <button type="submit" class="boton_index_forms">enviar</button>
         </form>
