Mejorarmos las paginas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     <main>
         <section class="menu"></section>
+        <button class="button" type="submit"><label>Cargar mas</label></button>
     </main>
 
     <footer> 
