Hize el login, falta que salten los alerts.

--- a/login.html
+++ b/login.html
@@ -14,17 +14,25 @@
         </section>
 
         <nav class="nav_index">
-                <a href="./index.html"><p>|Home|</p></a>
-                <a href="./categorias.html"><p>|Categorias|</p></a>
-                <a href="./login.html"><p>|Login|</p></a>
-                <a href="./registro.html"><p>|Registro|</p></a>
+                <a href="./index.html"><p>Home</p></a>
+                <a href="./categorias.html"><p>Categorias</p></a>
+                <a href="./login.html"><p>Login</p></a>
+                <a href="./registro.html"><p>Registro</p></a>
         </nav>
 
     </header>
+    <main>
+        <form action="./index.html" class="formslogin">
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="submit">Ingresar</button>
+        </form>
+    </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
+    <script src ="JS/login.js"></script>
 </body>
 </html>
