--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
         <form action="./index.html" class="formslogin">
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Contraseña" required>
-            <button type="submit">Ingresar</button>
+            <button type="submit" class="boton_login">Ingresar</button>
         </form>
     </main>
     <footer>
