Puse todos los headers iguales

--- a/categorias.html
+++ b/categorias.html
@@ -7,22 +7,28 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <section class="seccion_logo">
-        <img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo" class="logo">
-    </section>
+    <header>
+        <section class="seccion_logo">
+            <img src="https://png.pngtree.com/png-clipart/20210227/ourlarge/pngtree-dining-logo-design-png-image_2969145.jpg" alt="logo" class="logo">
+        </section>
 
-    <nav class="nav_index">
-            <a href="./index.html"><p>|Home|</p></a>
-            <a href="./categorias.html"><p>|Categorias|</p></a>
-            <a href="./login.html"><p>|Login|</p></a>
-            <a href="./registro.html"><p>|Registro|</p></a>
+        <nav class="nav_index">
+                <a href="./index.html" class="a_index"><p class="p_nav_index">Home</p></a>
+                <a href="./categorias.html" class="a_index"><p class="p_nav_index">Categorias</p></a>
+                <a href="./login.html" class="a_index"><p class="p_nav_index">Login</p></a>
+                <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
+        </nav>
     </nav>
 
-    </header>
+    
+    <main>
+        <section class ="picante"></section>
+    </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
+    <script src="./JS/categorias.js"></script>
 </body>
 </html>
