--- a/registro.html
+++ b/registro.html
@@ -14,10 +14,10 @@
         </section>
 
         <nav class="nav_index">
-                <a href="./index.html"><p>|Home|</p></a>
-                <a href="./categorias.html"><p>|Categorias|</p></a>
-                <a href="./login.html"><p>|Login|</p></a>
-                <a href="./registro.html"><p>|Registro|</p></a>
+                <a href="./index.html" class="a_index"><p class="p_nav_index">Home</p></a>
+                <a href="./categorias.html" class="a_index"><p class="p_nav_index">Categorias</p></a>
+                <a href="./login.html" class="a_index"><p class="p_nav_index">Login</p></a>
+                <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
 
     </header>
