--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
     </header>
     <main>
         <form action="./index.html" class="formslogin">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Contraseña" required>
+            <input type="email" id="email" value="" placeholder="Email" name="email" required>
+            <input type="password" id="password" value="" placeholder="Contraseña" name="password" required>
             <button type="submit" class="boton_login">Ingresar</button>
         </form>
     </main>
