hicimos el buscador

--- a/detallecat.html
+++ b/detallecat.html
@@ -19,9 +19,13 @@
                 <a href="./login.html" class="a_index"><p class="p_nav_index">Login</p></a>
                 <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
-        </nav>
+        
 
     </header>
+    <main>
+      
+
+    </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
