--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         </nav>
         
         <section class="seccion_form_index">
-            <form action="./resultados.html" method="GET" class="formulario_index">
-                
+            <form action="./resultadosbusqueda.html" method="GET" class="formulario_index">
                 <input type="text" name="buscador" placeholder="Buscar Recetas" required>
                 <button type="submit" class="boton_index_forms">Buscar</button>
             </form>
