--- a/resultadosbusqueda.html
+++ b/resultadosbusqueda.html
@@ -21,10 +21,17 @@
         </nav>
 
     </header>
+    <main>
+        <section class="seccion_detalles">
+
+        </section>
+
+    </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
+    <script src="./JS/recetas.js"></script>
 </body>
 </html>
