arregle el css de los resultados del buscador

--- a/resultadosbusqueda.html
+++ b/resultadosbusqueda.html
@@ -22,9 +22,7 @@
 
     </header>
     <main>
-        <section class="seccion_detalles">
-
-        </section>
+        <section class="seccion_detalles"></section>
 
     </main>
     <footer>
