Mismo footer en todos los htmls, no logro que salten los alerts del login

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </section>
     </main>
 
-    <footer class="footer_index"> 
-        <p class="p_footer_index">Lorenzo Fernandez Arancibia</p>
-        <p  class="p_footer_index">Felipe Repetto Echave</p>
-        <p  class="p_footer_index">Bautista Saenz Valiente</p>
+    <footer> 
+        <p >Lorenzo Fernandez Arancibia</p>
+        <p  >Felipe Repetto Echave</p>
+        <p  >Bautista Saenz Valiente</p>
     </footer>
 
     <script src="./JS/index.js"></script>
