Login y Registro terminados

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
             <input type="password" value="" placeholder="Contraseña" name="password" id="password">
             <div class="errorPassword"></div>
             <button class="botonlogin" type="submit" >Ingresar</button>
-            <label class="registrate">No tengo cuenta</label>
+            <label class="registrate">No tenes cuenta?</label>
             <button class="botonlogin" type="submit"><a href="./registro.html">Registrate</a></button>
         </form>
     </main>
