--- a/registro.html
+++ b/registro.html
@@ -22,7 +22,7 @@
 
     </header>
     <main>
-        <form class="formslogin" action="./index.html" method="get">
+        <form class="formslogin" action="./login.html" method="get">
             <input type="email" value="" placeholder="Email" name="email" id="email">
             <div class= "errorEmail"></div>
             <input type="password" value="" placeholder="Contraseña" name="password" id="password">
