avance con categoria, no lo puede completa igual

--- a/detallecat.html
+++ b/detallecat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chef Script: DetallesCategorias</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
 
     </header>
     <main>
-      
+      <section class="lpm"></section>
 
     </main>
     <footer>
@@ -31,5 +31,6 @@
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
+    <script src="./JS/detallescat.js"></script>
 </body>
 </html>
