centre le log in y el registro y agrege buscardor a detalles, hice otros detalles mas, falta categorias y el detalle de cada receta

--- a/login.html
+++ b/login.html
@@ -22,15 +22,17 @@
 
     </header>
     <main>
-        <form action="./index.html" class="formslogin" method="get">
-            <input type="email" value="" placeholder="Email" name="email" id="email">
-            <div class= "errorEmail"></div>
-            <input type="password" value="" placeholder="Contraseña" name="password" id="password">
-            <div class="errorPassword"></div>
-            <button class="botonlogin" type="submit" >Ingresar</button>
-            <label class="registrate">No tenes cuenta?</label>
-            <button class="botonlogin" type="submit"><a href="./registro.html">Registrate</a></button>
-        </form>
+        <section class="seccion_form_login">
+            <form action="./index.html" class="formslogin" method="get">
+                <input type="email" value="" placeholder="Email" name="email" id="email">
+                <div class= "errorEmail"></div>
+                <input type="password" value="" placeholder="Contraseña" name="password" id="password">
+                <div class="errorPassword"></div>
+                <button class="botonlogin" type="submit" >Ingresar</button>
+                <label class="registrate">No tenes cuenta?</label>
+                <button class="botonlogin" type="submit"><a href="./registro.html">Registrate</a></button>
+            </form>
+    </section>
     </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
