--- a/registro.html
+++ b/registro.html
@@ -22,20 +22,19 @@
 
     </header>
     <main>
-        <form class="formslogin" action="./login.html" method="get">
-            <input type="email" value="" placeholder="Email" name="email" id="email">
-            <div class= "errorEmail"></div>
-            <input type="password" value="" placeholder="Contraseña" name="password" id="password">
-            <div class="errorPassword"></div>
-            <input type="checkbox" name="terminos" value="terminos" required><div class="terminos">Acepto terminos y condiciones</div>
-            <button class="botonlogin" type="submit" >Ingresar</button>
-            <label class="registrate">Ya tenes cuenta?</label>
-            <button class="botonlogin" type="submit"><a href="./login.html">Login</a></button>
-
-
-
-
-        </form>
+        <section class="seccion_form_registro">
+            <form class="formslogin" action="./login.html" method="get">
+                <input type="email" value="" placeholder="Email" name="email" id="email">
+                <div class= "errorEmail"></div>
+                <input type="password" value="" placeholder="Contraseña" name="password" id="password">
+                <div class="errorPassword"></div>
+                <input type="checkbox" name="terminos" value="terminos" required>
+                <div class="terminos"><p>Acepto terminos y condiciones</p></div>
+                <button class="botonlogin" type="submit" >Ingresar</button>
+                <label class="registrate">Ya tenes cuenta?</label>
+                <button class="botonlogin" type="submit"><a href="./login.html">Login</a></button>
+            </form>
+        </section>
     </main>
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
