--- a/resultadosbusqueda.html
+++ b/resultadosbusqueda.html
@@ -20,6 +20,13 @@
                 <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
 
+        <section class="seccion_form_index">
+            <form action="./resultadosbusqueda.html" method="GET" class="formulario_index">
+                <input type="text" name="buscador" placeholder="Buscar Recetas" required>
+                <button type="submit" class="boton_index_forms">Buscar</button>
+            </form>
+        </section>
+
     </header>
     <main>
         <section class="seccion_detalles"></section>
