hice categorias, falta detalles de categorias

--- a/detallecat.html
+++ b/detallecat.html
@@ -23,7 +23,7 @@
 
     </header>
     <main>
-      <section class="lpm"></section>
+      <section class="seccion_detalles_cat"></section>
 
     </main>
     <footer>
