--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     </header>
     
-    <main>
+    <main class="main_index">
         <section class="menu"></section>
         <section class="seccion_boton_cargarmas">
             <button class="button_cargarmas" type="submit"><b>Cargar mas</b></button>
