--- a/resultadosbusqueda.html
+++ b/resultadosbusqueda.html
@@ -22,8 +22,11 @@
 
         <section class="seccion_form_index">
             <form action="./resultadosbusqueda.html" method="GET" class="formulario_index">
-                <input type="text" name="buscador" placeholder="Buscar Recetas" required>
-                <button type="submit" class="boton_index_forms">Buscar</button>
+                <div class="input_boton_formulario_index">
+                    <input type="text" name="buscador" placeholder="Buscar Recetas" required class="buscador">
+                    <button type="submit" class="boton_index_forms">Buscar</button>
+                </div>
+                <div class="formulario_index_menos_que3"></div>
             </form>
         </section>
 
