hice el detalles de categorias

--- a/detalles.html
+++ b/detalles.html
@@ -23,7 +23,26 @@
     </header>
 
     <main class="main_detalles">
-        <section class="seccion_detalles_de_recetas"></section>
+        <section class="seccion_detalles_de_recetas">
+            <article class="article_detalles_receta">
+                <div class="detalles_titulo_solo">
+                    <h2></h2>
+                </div>
+
+                <img src="" alt="" class="imagen_receta_detalles">
+                <article class="detalles_titulo_tp_tc">
+                    <p class="tiempo"><b>Tiempo de preparación:</b> </p>
+                    <p class="tiempoC"><b>Tiempo de cocción:</b>  </p>
+                    <ul class="Categoriasul">
+
+                    </ul>
+            
+                </article>
+                <article class="instrucciones_de_detalle">
+                    <p class="titulo_instrucciones"><b>Instrucciones:</b></p><p class="InstruccionesD"></p>
+                </article>
+            </article>
+        </section>
     </main>
 
     <footer>
