Terminamos bien el buscador, queda media q

--- a/detalles.html
+++ b/detalles.html
@@ -34,6 +34,7 @@
                     <p class="tiempo"><b>Tiempo de preparación:</b> </p>
                     <p class="tiempoC"><b>Tiempo de cocción:</b>  </p>
                     <ul class="Categoriasul">
+                        <p>Categorias: </p>
 
                     </ul>
             
