Hicimos el titulo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     </header>
     
     <main class="main_index">
+       <section>
+        <article class="h12"><h1 class="h1adentro">Chef Script </h1></article>
+       </section> 
         <section class="menu"></section>
         <section class="seccion_boton_cargarmas">
             <button class="button_cargarmas" type="submit"><b>Cargar mas</b></button>
