Cambie los nombres de las paginas como pedia en playground, me fije que se linkee todo como antes

--- a/category.html
+++ b/category.html
@@ -31,6 +31,6 @@
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
-    <script src="./JS/detallescat.js"></script>
+    <script src="./JS/category.js"></script>
 </body>
 </html>
