--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         
         <section class="seccion_form_index">
-            <form action="./resultadosbusqueda.html" method="GET" class="formulario_index">
+            <form action="./search-results.html" method="GET" class="formulario_index">
                 <div class="input_boton_formulario_index">
                     <input type="text" name="buscador" placeholder="Buscar Recetas" required class="buscador">
                     <button type="submit" class="boton_index_forms">Buscar</button>
