--- a/receta.html
+++ b/receta.html
@@ -20,26 +20,38 @@
                 <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
 
-        <section class="seccion_form_index">
-            <form action="./resultadosbusqueda.html" method="GET" class="formulario_index">
-                <div class="input_boton_formulario_index">
-                    <input type="text" name="buscador" placeholder="Buscar Recetas" required class="buscador">
-                    <button type="submit" class="boton_index_forms">Buscar</button>
-                </div>
-                <div class="formulario_index_menos_que3"></div>
-            </form>
-        </section>
-
     </header>
-    <main>
-        <section class="seccion_detalles"></section>
 
+    <main class="main_detalles">
+        <section class="seccion_detalles_de_recetas">
+            <article class="article_detalles_receta">
+                <div class="detalles_titulo_solo">
+                    <h2></h2>
+                </div>
+
+                <img src="" alt="" class="imagen_receta_detalles">
+                <article class="detalles_titulo_tp_tc">
+                    <p class="tiempo"><b>Tiempo de preparación:</b> </p>
+                    <p class="tiempoC"><b>Tiempo de cocción:</b>  </p>
+                    <ul class="Categoriasul">
+                        <p>Categorias: </p>
+
+                    </ul>
+            
+                </article>
+                <article class="instrucciones_de_detalle">
+                    <p class="titulo_instrucciones"><b>Instrucciones:</b></p><p class="InstruccionesD"></p>
+                </article>
+            </article>
+        </section>
     </main>
+
     <footer>
         <p>Lorenzo Fernandez Arancibia</p>
         <p>Felipe Repetto Echave</p>
         <p>Bautista Saenz Valiente</p>
     </footer>
-    <script src="./JS/recetas.js"></script>
+
+    <script src="./JS/receta.js"></script>
 </body>
 </html>
