--- a/categorias.html
+++ b/categorias.html
@@ -20,6 +20,16 @@
         </nav>
     </nav>
 
+    <section class="seccion_form_index">
+        <form action="./search-results.html" method="GET" class="formulario_index">
+            <div class="input_boton_formulario_index">
+                <input type="text" name="buscador" placeholder="Buscar Recetas" required class="buscador">
+                <button type="submit" class="boton_index_forms">Buscar</button>
+            </div>
+            <div class="formulario_index_menos_que3"></div>
+        </form>
+    </section>
+    
     </header>
     <main>
         <section class ="picante"></section>
