--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                 <div class="errorPassword"></div>
                 <button class="botonlogin" type="submit" >Ingresar</button>
                 <label class="registrate">No tenes cuenta?</label>
-                <button class="botonlogin" type="submit"><a href="./registro.html">Registrate</a></button>
+                <button class="botonlogin" type="submit">Registrate</button>
             </form>
     </section>
     </main>
