--- a/receta.html
+++ b/receta.html
@@ -20,6 +20,16 @@
                 <a href="./registro.html" class="a_index"><p class="p_nav_index"> Registro</p></a>
         </nav>
 
+        <section class="seccion_form_index">
+            <form action="./search-results.html" method="GET" class="formulario_index">
+                <div class="input_boton_formulario_index">
+                    <input type="text" name="buscador" placeholder="Buscar Recetas" required class="buscador">
+                    <button type="submit" class="boton_index_forms">Buscar</button>
+                </div>
+                <div class="formulario_index_menos_que3"></div>
+            </form>
+        </section>
+
     </header>
 
     <main class="main_detalles">
