--- a/registro.html
+++ b/registro.html
@@ -28,11 +28,11 @@
                 <div class= "errorEmail"></div>
                 <input type="password" value="" placeholder="Contraseña" name="password" id="password">
                 <div class="errorPassword"></div>
-                <input type="checkbox" name="terminos" value="terminos" required>
+                <input type="checkbox" name="terminos" value="terminos">
                 <div class="terminos"><p>Acepto terminos y condiciones</p></div>
                 <button class="botonlogin" type="submit" >Ingresar</button>
                 <label class="registrate">Ya tenes cuenta?</label>
-                <button class="botonlogin" type="submit"><a href="./login.html">Login</a></button>
+                <button class="botonlogin" type="submit">Login</button>
             </form>
         </section>
     </main>
