--- a/search-results.html
+++ b/search-results.html
@@ -32,6 +32,7 @@
 
     </header>
     <main>
+        <h2 class="polaco"></h2>
         <section class="seccion_detalles"></section>
 
     </main>
